# vibe-coding-blackboard

./: .gitignore  index.html  package-lock.json  package.json  server.js  tsconfig.app.tsbuildinfo  vite.config.ts
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_chat.rs  file_io.rs  mod.rs
src/components/canvas/: Canvas.tsx  CanvasToolbar.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ChatSuggestions.tsx  ProviderPicker.tsx
src/components/edges/: LabeledEdge.tsx  index.ts
src/components/export/: ExportDialog.tsx
src/components/nodes/: BaseNode.tsx  BusinessLogicNode.tsx  ContentNode.tsx  GroupNode.tsx  UserActionNode.tsx  index.ts
src/components/palette/: Palette.tsx  PaletteCategory.tsx  PaletteItem.tsx
src/components/properties/: PropertiesPanel.tsx
src/components/templates/: TemplateDialog.tsx
src/components/ui/: Toast.tsx
src/config/: canvas-tools.ts  default-templates.ts  node-definitions.ts  providers.ts  theme.ts
src/hooks/: useAiChat.ts  useKeyboardShortcuts.ts
src/lib/: export-markdown.ts
src/stores/: canvas-store.ts  chat-store.ts  settings-store.ts  toast-store.ts  ui-store.ts
src/types/: ai-chat.ts  canvas.ts  export.ts  node-palette.ts
